# ESP32-SmartPowerOutlet

./: .gitignore  CMakeLists.txt  README.md  check_partitions.ps1  package-lock.json  package.json  partitions.csv  sdkconfig  sdkconfig.old  small_client.py  small_server.py  tailwind.config.js  test.json
LocalServer/: .gitignore  app.py
LocalServer/static/css/: style.css  style_input.css
LocalServer/static/js/: color_picker.js  led_switch.js  relais_switch.js
LocalServer/templates/: index.html
components/internal_temperature_sensor/: CMakeLists.txt
components/internal_temperature_sensor/include/: InternalTemperatureSensor.h
components/internal_temperature_sensor/src/: InternalTemperatureSensor.cpp
components/ntc/: CMakeLists.txt
components/ntc/include/: ntc.h
components/ntc/src/: ntc.cpp
main/: CMakeLists.txt  CeilingLight.cpp  CeilingLight.h  IRSender.cpp  IRSender.h  Kconfig.projbuild  MemoryWatcher.cpp  MemoryWatcher.h  MqttClient.cpp  MqttClient.h  TimeMeasurement.cpp  TimeMeasurement.h  fft.cpp  fft.h  helpers.h  http_handlers.cpp  http_handlers.h  https_handlers.cpp  https_handlers.h  json_helpers.h  ledctrl.cpp  ledctrl.h  logger.cpp  logger.h  main.cpp  server_uri.cpp  server_uri.h  wifi-connection.c  wifiscan.cpp  wifiscan.h  wifistation.cpp  wifistation.h
